--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nguyễn Văn Đức - Cv</title>
-    <link rel="stylesheet" href="./assets/image/" />
-    <link rel="stylesheet" href="./assets/main.css" />
+    <link rel="stylesheet" href="./image/" />
+    <link rel="stylesheet" href="./main.css" />
     <link
       rel="stylesheet"
-      href="./assets/icons/themify-icons/themify-icons.css"
+      href="themify-icons/themify-icons.css"
     />
   </head>
   <body>
@@ -44,7 +44,7 @@
       <div class="section-infor">
         <!-- Phần tiêu đề nội dung -->
         <div class="column-left">
-          <img src="./assets/image/avtog.jpg" alt="" />
+          <img src="./image/avtog.jpg" alt="" />
         </div>
         <div class="column-right right-column">
           <div class="head-content">
