--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./main.css" />
     <link
       rel="stylesheet"
-      href="themify-icons/themify-icons.css"
+      href="themify-icons.css"
     />
   </head>
   <body>
